1.4.1: fixes