@@ -7,7 +7,7 @@
     <groupId>ru.ancap</groupId>
     <artifactId>puklapom</artifactId>
     <packaging>pom</packaging>
-    <version>1.4</version>
+    <version>${revision}</version>
 
     <properties>
         <!-- CLI Args -->
@@ -110,42 +110,39 @@
                         
                         <skip>${useTakariLifecycle}</skip>
                         <skipMain>${useTakariLifecycle}</skipMain>
-                        
+
                         <!-- Checker Framework -->
-                        <fork>true</fork>
+                        <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
                         <compilerArgument>-Xlint:all</compilerArgument>
                         <showWarnings>true</showWarnings>
 
                         <annotationProcessorPaths combine.children="append">
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
                             <path>
                                 <groupId>org.checkerframework</groupId>
                                 <artifactId>checker</artifactId>
                                 <version>${checker-framework.version}</version>
                             </path>
                         </annotationProcessorPaths>
-                        
+
                         <annotationProcessors>
                             <!-- Language -->
-                            <annotationProcessor>
-                                org.checkerframework.common.subtyping.SubtypingChecker
-                            </annotationProcessor>
-                            <annotationProcessor>
-                                org.checkerframework.checker.nullness.NullnessChecker
-                            </annotationProcessor>
-                            <annotationProcessor>
-                                org.checkerframework.checker.resourceleak.ResourceLeakChecker
-                            </annotationProcessor>
-                            
+                            <annotationProcessor>org.checkerframework.common.subtyping.SubtypingChecker</annotationProcessor>
+                            <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
+                            <annotationProcessor>org.checkerframework.checker.resourceleak.ResourceLeakChecker</annotationProcessor>
+
                             <!-- Linter-like -->
-                            <annotationProcessor>
-                                org.checkerframework.checker.interning.InterningChecker
-                            </annotationProcessor>
-                            <annotationProcessor>
-                                org.checkerframework.checker.formatter.FormatterChecker
-                            </annotationProcessor>
-                            <annotationProcessor>
-                                org.checkerframework.common.value.ValueChecker
-                            </annotationProcessor>
+                            <annotationProcessor>org.checkerframework.checker.interning.InterningChecker</annotationProcessor>
+                            <annotationProcessor>org.checkerframework.checker.formatter.FormatterChecker</annotationProcessor>
+                            <annotationProcessor>org.checkerframework.common.value.ValueChecker</annotationProcessor>
+
+                            <!-- https://github.com/Calvin-L/checker-framework-plus-lombok -->
+                            <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>
+                            <annotationProcessor>lombok.launch.AnnotationProcessorHider$ClaimingProcessor</annotationProcessor>
                         </annotationProcessors>
                         
                         <!-- Fuck brian goetz. -->
@@ -158,6 +155,7 @@
                             <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                             <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                             <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                         </compilerArgs>
                     </configuration>
